FG-03-07-02: Add Zotero Picker support

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="dc:publisher" content="Other institution" />
+    <meta name="citation_publisher" content="Deutsches Historisches Institut in Rom" />
+    <meta name="citation_title" content="PLACEHOLDER_TITLE" />
+    <meta name="citation_book_title" content="Ferdinand Gregorovius. Poesie und Wissenschaft. Gesammelte deutsche und italienische Briefe. Digitale Edition." />
+    <meta name="citation_author" content="Steinsiek, Angela" />
+    <meta name="citation_date" content="2017-2023" />
+
     <title>Gregorovius Briefedition</title>
   </head>
   <body>
