SUPPORT-19: Add announcement section

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="dc:publisher" content="Other institution" />
-    <meta name="citation_publisher" content="Deutsches Historisches Institut in Rom" />
-    <meta name="citation_title" content="PLACEHOLDER_TITLE" />
-    <meta name="citation_book_title" content="Ferdinand Gregorovius. Poesie und Wissenschaft. Gesammelte deutsche und italienische Briefe. Digitale Edition." />
-    <meta name="citation_author" content="Steinsiek, Angela" />
-    <meta name="citation_date" content="2017-2023" />
 
-    <title>Gregorovius Briefedition</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>Die Briefedition Ferdinand Gregorovius funktioniert nicht ohne JavaScript. Bitte aktivieren sie JavaScript in Ihrem Browser.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="dc:publisher" content="Other institution" />
+  <meta name="citation_publisher" content="Deutsches Historisches Institut in Rom" />
+  <meta name="citation_title" content="PLACEHOLDER_TITLE" />
+  <meta name="citation_book_title"
+    content="Ferdinand Gregorovius. Poesie und Wissenschaft. Gesammelte deutsche und italienische Briefe. Digitale Edition." />
+  <meta name="citation_author" content="Steinsiek, Angela" />
+  <meta name="citation_date" content="2017-2023" />
+
+  <title>Gregorovius Briefedition</title>
+
+
+  <!-- Matomo -->
+  
+
+<!-- Matomo -->
+<script>
+  var _paq = window._paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(["disableCookies"]);
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//localhost/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '2']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Code -->
+
+
+
+
+</head>
+
+<body>
+  <noscript>
+    <strong>Die Briefedition Ferdinand Gregorovius funktioniert nicht ohne JavaScript. Bitte aktivieren sie JavaScript
+      in Ihrem Browser.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
